--- a/IBIS_main2.html
+++ b/IBIS_main2.html
@@ -1,106 +1,107 @@
 <!DOCTYPE html>
 <html lang="EN" dir="ltr" xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <meta http-equiv="content-type" content="text/xml; charset=utf-8" />
-        <title>
-          I B I S - Indexed Biological Information Server
-        </title>
-        <script type="text/javascript" src="jquery-2.1.1.min.js"> </script>
-        <script type="text/javascript" src="main.js"> </script>
-        <script type="text/javascript" src="dateshorts.js"> </script>
-        <script type="text/javascript" src="picswap.js"> </script>
-	<script type="text/javascript" src="DD_rondies.js"></script>
-	
-	<script type="text/javascript">
-	  DD_roundies.addRule('.littleDD', 35);
-	  DD_roundies.addRule('.bigDD', 25);
-	</script>
-  <link rel="stylesheet"
+  <head>
+    <meta http-equiv="content-type" content="text/xml; charset=utf-8" />
+    <title>
+      I B I S - Indexed Biological Information Server
+    </title>
+    <script type="text/javascript" src="jquery-2.1.1.min.js"> </script>
+    <script type="text/javascript" src="main.js"> </script>
+    <script type="text/javascript" src="dateshorts.js"> </script>
+    <script type="text/javascript" src="picswap.js"> </script>
+  	<script type="text/javascript" src="DD_rondies.js"></script>
+	  <script type="text/javascript">
+	    DD_roundies.addRule('.littleDD', 35);
+	    DD_roundies.addRule('.bigDD', 25);
+	  </script>
+    <link rel="stylesheet"
         type="text/css"
         href="./IBIS_maincss.css"
-   />
-   <link rel="stylesheet"
+    />
+    <link rel="stylesheet"
         type="text/css"
         href="./IBIS_other-functions.css"
-   />
+    />
 
     </head>
     <body id="TheBody" onload="initForm()">
-      <div id=allContainer>
+      <div id=allContainer class="bigDD">
 	    <div id="dateTime">
-	        <div id="dateBlock">The Date</div>
-	        <div id="timeBlock">The Time</div>       
+	      <div id="dateBlock">The Date</div>
+	      <div id="timeBlock">The Time</div>       
 	    </div>
-	<div id="logo_image_holder">
-	  <img id="logo_image" src="./images/Logo1_fullsizetransp.png"/>
-	</div>
-	  <form name="categoryForm" action="../../cgi-bin/newIndexCreator.php3" method="POST" enctype="multipart/form-data" >
+	    <div id="logo_image_holder">
+	      <img id="logo_image" src="./images/Logo1_fullsizetransp.png"/>
+	    </div>
+	    <form name="categoryForm" action="../../cgi-bin/newIndexCreator.php3" method="POST" enctype="multipart/form-data" >
 	      <input type="text" name="catValue" id="catHeading" class="hiddentext" />
-	  </form>
-	  <div id="errorDiv"></div>
-	  <div id="greetingDiv"></div>
-	  <div id="loginLink" class="littleDD linksclass" style="">
-	  <label id="loginhead" class="littleDD linksclass" onclick="showLogin()">Login</label>
-	  <label id="logouthead" class="littleDD linksclass logoutCstart" style="display:none;" onclick="do_logout()">Logout</label>
-	  <form name="loginForm" action="../../cgi-bin/login.php3" method="POST" enctype="multipart/form-data">
-	    <div id="login" class="littleDD login" style="display : none;">
-	      <label class="labelClass">Your first name</label><br>
-	      <input type="text" name="uName" id="uname" class="" /><br>
-	      <label class="labelClass">Your email</label><br>
-	      <input type="text" name="uEmail" id="uemail" class="" /><br>
-	      <input type="button" value="OKay" onclick="input_checker()" />
-	      <input type="button" value="Cancel" onclick="cancelLogin()" /><br>
+	    </form>
+	    <div id="errorDiv"></div>
+	    <div id="greetingDiv"></div>
+	    <div id="loginLink" class="littleDD linksclass" style="">
+	      <label id="loginhead" class="littleDD linksclass" onclick="showLogin()">Login</label>
+	      <label id="logouthead" class="littleDD linksclass logoutCstart" style="display:none;" onclick="do_logout()">Logout</label>
+	    
+	      <form name="loginForm" action="../../cgi-bin/login.php3" method="POST" enctype="multipart/form-data">
+	        <div id="login" class="littleDD login" style="display : none;">
+	          <label class="labelClass">Your first name</label><br>
+	          <input type="text" name="uName" id="uname" class="" /><br>
+	          <label class="labelClass">Your email</label><br>
+	          <input type="text" name="uEmail" id="uemail" class="" /><br>
+	          <input type="button" value="OKay" onclick="input_checker()" />
+	          <input type="button" value="Cancel" onclick="cancelLogin()" /><br>
+	        </div>
+	      
+	      </form>
 	    </div>
-	  </form>
-	  <div id="cgiResult" ></div>
-	</div>
-	<div id="detail_fs_main" class="littleDD">
-	<div id="registerBlock" class="littleDD linksclass adminC ">
-	  <a href="IBIS_Registration.html" class="littleDD linksclass">Register as a contributer</a>
-	</div>
-	<div id="guestBook" class="littleDD linksclass">
-	  <a href="../../cgi-bin/IBIS_GuestBook.php3" class="littleDD linksclass">The GuestBook</a>
-	</div>
-	  <div id="LinkList" class="bigDD">
-	  <h2>Eco Links</h2>
-	  <ul>
-	      <li><a href="">CTEET</a></li>
-	      <li><a href="./fbay/fbepfacts1.php.html">FBNR</a></li>
-	      <li><a href="">Read more about something else....</a></li>
-	      <li><a href="IBIS_other_functions.html">Other functions</a></li>
-	  </ul>
-	</div>
-	<div id="FindInfo" class="bigDD">
-	    <h1>Find Information</h1>
-	    <div id="animal" class="findOption">
-	      <h2 class="findHeading">Animal</h2>
-	      <img id="animlink" class="optImage" src="images/animals.gif" onclick="loadIndex('animals');" /> 
-	      <p class="contextHelp">Click here to find info on animals in this area.</p>
-	    </div>
-	    <div id="vegetable" class="findOption">
-	      <h2 class="findHeading">Vegetable</h2>
-	      <img id="veglink" class="optImage" src="images/vegetables.gif" onclick="loadIndex('vegetables');" /> 
-	      <p class="contextHelp">Click here to find info on flora in this area.</p>
-	   </div>
-	   <div id="mineral" class="findOption">
-	      <h2 class="findHeading">Mineral</h2>
-	      <img id="minlink" class="optImage" src="images/minerals.gif" onclick="loadIndex('minerals');" />
-	      <p class="contextHelp">Click here to find info on minerals in this area.</p>
-	   </div>
-	</div>
-	<div id="DidYouKnow" class="littleDD">
-	  <div id="DYK"><h2>Did you know?</h2><br><br></div>
-	  <div id=dykText> that the sky is blue </div>
-	</div>
-	<script type="text/javascript" src="login.js"></script>
-	<script type="text/javascript">
-	  function loadIndex(catname){
-	  document.categoryForm.catValue.value = catname;
-	  document.categoryForm.submit();
-	  }
-
-	</script>
-	
- </body></html>
+	  
+	    <div id="cgiResult" ></div>
+	    <div id="detail_fs_main" class="littleDD">
+	      <div id="registerBlock" class="littleDD linksclass adminC ">
+	        <a href="IBIS_Registration.html" class="littleDD linksclass">Register as a contributer</a>
+	      </div>
+	      <div id="guestBook" class="littleDD linksclass">
+	        <a href="../../cgi-bin/IBIS_GuestBook.php3" class="littleDD linksclass">The GuestBook</a>
+	      </div>
+	      <div id="LinkList" class="bigDD">
+	        <p class="H2">Eco Links</p>
+	        <ul>
+	          <li><a href="">CTEET</a></li>
+	          <li><a href="./fbay/fbepfacts1.php.html">FBNR</a></li>
+	          <li><a href="">Read more about something else....</a></li>
+	          <li><a href="IBIS_other_functions.html">Other functions</a></li>
+	        </ul>
+	      </div>
+	      <div id="FindInfo" class="bigDD">
+	        <h1>Find Information</h1>
+	        <div id="animal" class="findOption">
+	          <h2 class="findHeading">Animal</h2>
+	          <img id="animlink" class="optImage" src="images/animals.gif" onclick="loadIndex('animals');" /> 
+	          <p class="contextHelp">Click here to find info on animals in this area.</p>
+	        </div>
+	        <div id="vegetable" class="findOption">
+	          <h2 class="findHeading">Vegetable</h2>
+	          <img id="veglink" class="optImage" src="images/vegetables.gif" onclick="loadIndex('vegetables');" /> 
+	          <p class="contextHelp">Click here to find info on flora in this area.</p>
+	        </div>
+	        <div id="mineral" class="findOption">
+	          <h2 class="findHeading">Mineral</h2>
+	          <img id="minlink" class="optImage" src="images/minerals.gif" onclick="loadIndex('minerals');" />
+	          <p class="contextHelp">Click here to find info on minerals in this area.</p>
+	        </div>
+	      </div>
+	      <div id="DidYouKnow" class="littleDD">
+	        <div id="DYK"><h2>Did you know?</h2><br><br></div>
+	        <div id=dykText> that the sky is blue </div>
+	      </div>
+	      <script type="text/javascript" src="login.js"></script>
+	      <script type="text/javascript">
+	        function loadIndex(catname){
+	          document.categoryForm.catValue.value = catname;
+	          document.categoryForm.submit();
+          }
+      	</script>
+    </body>
+</html>
 
 
