something strange happend to the veg input page while I was away but the last version was still good so i restored it in this commit. Still lots of work to do though.

--- a/IBIS_main2.html
+++ b/IBIS_main2.html
@@ -73,7 +73,7 @@
 	        </ul>
 	      </div>
 	      <div id="FindInfo" class="bigDD">
-	        <h1>Find Information</h1>
+	        <h2>Find Information</h2>
 	        <div id="animal" class="findOption">
 	          <h2 class="findHeading">Animal</h2>
 	          <img id="animlink" class="optImage" src="images/animals.gif" onclick="loadIndex('animals');" /> 
@@ -91,7 +91,7 @@
 	        </div>
 	      </div>
 	      <div id="DidYouKnow" class="littleDD">
-	        <div id="DYK"><h2>Did you know?</h2><br><br></div>
+	        <div id="DYK"><h2>Did you know?</h2></div>
 	        <div id=dykText> that the sky is blue </div>
 	      </div>
 	      <script type="text/javascript" src="login.js"></script>
