--- a/IBIS_Registration.html
+++ b/IBIS_Registration.html
@@ -36,7 +36,7 @@
 	<form name="registerForm" method="POST" action="../../cgi-bin/IBIS_register.php3" enctype="multipart/form-data" >
 	<div id=pgButtons>
 	      <input type="button" id="buttonBtn" class="littleDD buttonclass" onclick="submitRegistration()" value="Submit">
-	      <a id="backButton" href="/IBIS_Files_new/IBIS_main2.html" class="littleDD buttonclass">Back to Main Page </a>
+	      <a id="backButton" href="/ibis/IBIS_main2.html" class="littleDD buttonclass">Back to Main Page </a>
 	    </div>
 	  <fieldset id="detail_fs" class="littleDD">
             <div id="personalDetails" class="littleDD">
