lots of changes because i standardized the js to use only jquery selectors...still lots to do but it works

--- a/IBIS_animalia-table2.html
+++ b/IBIS_animalia-table2.html
@@ -6,7 +6,7 @@
         <title>
           I B I S - Indexed Biological Information Server
         </title>
-        <script type="text/javascript" src="jquery-2.1.1.min.js"></script>
+        <script type="text/javascript" src="jquery-1.11.3.js"></script>
 	<script type="text/javascript" src="DD_rondies.js"></script>
 	
 	<script type="text/javascript">
