--- a/IBIS_main2.html
+++ b/IBIS_main2.html
@@ -5,15 +5,10 @@
     <title>
       I B I S - Indexed Biological Information Server
     </title>
-    <script type="text/javascript" src="jquery-2.1.1.min.js"> </script>
+    <script type="text/javascript" src="jquery-1.11.3.js"> </script>
     <script type="text/javascript" src="main.js"> </script>
     <script type="text/javascript" src="dateshorts.js"> </script>
     <script type="text/javascript" src="picswap.js"> </script>
-  	<script type="text/javascript" src="DD_rondies.js"></script>
-	  <script type="text/javascript">
-	    DD_roundies.addRule('.littleDD', 35);
-	    DD_roundies.addRule('.bigDD', 25);
-	  </script>
     <link rel="stylesheet"
         type="text/css"
         href="./IBIS_maincss.css"
