--- a/IBIS_animalia-table.html
+++ b/IBIS_animalia-table.html
@@ -6,8 +6,8 @@
         <title>
           I B I S - Indexed Biological Information Server
         </title>
-        
-	<script type="text/javascript" src="DD_rondies.js"></script>
+         <script type="text/javascript" src="jquery-1.11.3.js"> </script>       
+					<script type="text/javascript" src="DD_rondies.js"></script>
 	
 	<script type="text/javascript">
 
