--- a/IBIS_other_functions.html
+++ b/IBIS_other_functions.html
@@ -5,7 +5,7 @@
         <title>
           I B I S - Other Functions
         </title>
-        <script type="text/javascript" src="jquery-2.1.1.min.js"></script>
+        <script type="text/javascript" src="jquery-1.11.3.js"></script>
         <script type="text/javascript" src="Gmain.js"></script>
         <script type="text/javascript" src="dateshorts.js"></script>
         <script type="text/javascript" src="DD_rondies.js"></script>
