fixed misspelled headings in Vegetables set

--- a/Veg_Input_Page.html
+++ b/Veg_Input_Page.html
@@ -51,9 +51,13 @@
             <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">Class</label></p>
             <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">subClass</label></p>
             <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">Order</label></p>
+            <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">subOrder</label></p>
             <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">Family</label></p>
+            <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">subFamily</label></p>
             <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">Genus</label></p>
+            <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">subGenus</label></p>
             <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">Species</label></p>
+            <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">subSpecies</label></p>
             <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">Common_Names</label></p>
             <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">Name_Notes</label></p>
             <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">Description</label></p>
@@ -78,9 +82,13 @@
 				    <input type="text" id="Class" name="class" class="hiddentext">
 				    <input type="text" id="subClass" name="subClass" class="hiddentext">
 						<input type="text" id="Order" name="order" class="hiddentext">
+						<input type="text" id="subOrder" name="suborder" class="hiddentext">
 						<input type="text" id="Family" name="family" class="hiddentext">
+						<input type="text" id="subFamily" name="subfamily" class="hiddentext">
 						<input type="text" id="Genus" name="genus" class="hiddentext">
+						<input type="text" id="subGenus" name="subgenus" class="hiddentext">
 						<input type="text" id="Species" name="species" class="hiddentext">
+						<input type="text" id="subSpecies" name="subspecies" class="hiddentext">
 						<input type="text" id="Common_Names" name="common_Names" class="hiddentext">
 						<textarea id="Name_Notes" name="name_Notes" class="hiddentext"></textarea>
 						<textarea id="Description" name="description" class="hiddentext"></textarea>
