added plants and animals lookup lists and their jscript and stylesheets. The list are made by freemind and I just tweaked them some.

--- a/IBIS_main2.html
+++ b/IBIS_main2.html
@@ -20,7 +20,7 @@
 
     </head>
     <body id="TheBody" onload="initForm()">
-      <div id=allContainer class="bigDD">
+      <div id="allContainer" class="bigDD">
 	    <div id="dateTime">
 	      <div id="dateBlock">The Date</div>
 	      <div id="timeBlock">The Time</div>       
@@ -39,7 +39,7 @@
 	    
 	      <form name="loginForm" action="../../cgi-bin/login.php3" method="POST" enctype="multipart/form-data">
 	        <div id="login" class="littleDD login" style="display : none;">
-	          <label class="labelClass">Your first name</label><br>
+	          <label class="labelClass">Your user name</label><br>
 	          <input type="text" name="uName" id="uname" class="" /><br>
 	          <label class="labelClass">Your email</label><br>
 	          <input type="text" name="uEmail" id="uemail" class="" /><br>
