consolidated most of the styles into IBIS_maincss.

--- a/IBIS_main2.html
+++ b/IBIS_main2.html
@@ -11,16 +11,13 @@
     <script type="text/javascript" src="picswap.js"> </script>
     <link rel="stylesheet"
         type="text/css"
-        href="./IBIS_maincss.css"
+        href="IBIS_maincss.css"
     />
-    <link rel="stylesheet"
-        type="text/css"
-        href="./IBIS_other-functions.css"
-    />
+    
 
     </head>
     <body id="TheBody" onload="initForm()">
-      <div id="allContainer" class="bigDD">
+      <div id="MainallContainer" class="bigDD">
 	    <div id="dateTime">
 	      <div id="dateBlock">The Date</div>
 	      <div id="timeBlock">The Time</div>       
@@ -76,7 +73,7 @@
 	        </div>
 	        <div id="vegetable" class="findOption">
 	          <h2 class="findHeading">Vegetable</h2>
-	          <img id="veglink" class="optImage" src="images/vegetables.gif" onclick="loadIndex('vegetables');" /> 
+	          <img id="veglink" class="optImage" src="images/vegetablesCl.gif" onclick="loadIndex('vegetables');" /> 
 	          <p class="contextHelp">Click here to find info on flora in this area.</p>
 	        </div>
 	        <div id="mineral" class="findOption">
