--- a/IBIS_other_functions.html
+++ b/IBIS_other_functions.html
@@ -8,22 +8,14 @@
   <script type="text/javascript" src="jquery-1.11.3.js"></script>
   <script type="text/javascript" src="Gmain.js"></script>
   <script type="text/javascript" src="dateshorts.js"></script>
-  <script type="text/javascript" src="DD_rondies.js"></script>
-  <script type="text/javascript">
-   DD_roundies.addRule('.littleDD', 35);
-   DD_roundies.addRule('.bigDD', 25);
-  </script>
   <link rel="stylesheet"
   type="text/css"
               href="IBIS_maincss.css"
               />
-       <link rel="stylesheet"
-              type="text/css"
-              href="IBIS_other-functions.css"
-              />
+      
     </head>
     <body id="TheBody" onload="initForm()">
-        <div id="allContainer" class="ac">
+        <div id="MainallContainer" class="ac">
       <div id="dateTime">
         <div id="dateBlock">The Date</div>
         <div id="timeBlock">The Time</div>       
