--- a/IBIS_Registration.html
+++ b/IBIS_Registration.html
@@ -9,7 +9,6 @@
         <script type="text/javascript" src="Gmain.js"> </script>
         <script type="text/javascript" src="dateshorts.js"></script>
         <script type="text/javascript" src="IBIS_register.js"></script>
-        <script type="text/javascript" src="DD_rondies.js"></script>
         <script type="text/javascript" src="http://127.0.0.1/ibis/fileselect.js"></script>
 	
 	<script type="text/javascript">
@@ -17,20 +16,16 @@
 	 	 	$('#regPic').change(handleFileSelect);	
 	 		
 	 	})
-	  DD_roundies.addRule('.littleDD', 35);
-	  DD_roundies.addRule('.bigDD', 25);
+	 
 	</script>
         <link rel="stylesheet"
               type="text/css"
               href="./IBIS_maincss.css"
               />
-         <link rel="stylesheet"
-              type="text/css"
-              href="./IBIS_register.css"
-              />
+         
     </head>
     <body id="TheBody" onload="initForm()">
-      <div id="allContainer" class="ac">
+      <div id="REGallContainer" class="ac">
        <div id="dateTime">
         <div id="dateBlock">The Date</div>
         <div id="timeBlock">The Time</div>       
