a first attempt to standardize and consolidate the stylesheets\n\n/n/nnot so bad except I need to fit it for mobile

--- a/Animal_Input_Page2.html
+++ b/Animal_Input_Page2.html
@@ -28,7 +28,7 @@
 	</script>
 	<link rel="stylesheet"
         type="text/css"
-        href="./AnimInput_old.css"
+        href="DataInput.css"
   >
     </head>
    <body name="AnimInputBody"  >
