--- a/Mineral_Input_Page2.html
+++ b/Mineral_Input_Page2.html
@@ -33,7 +33,7 @@
 
          <link rel="stylesheet"
               type="text/css"
-              href="MinInput.css"
+              href="DataInput.css"
              >
         
     </head>
@@ -53,7 +53,7 @@
 				    <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">Group</label></p>
 				    <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">Crystal_System</label></p>
 				    <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">Habit</label></p>
-				    <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">Chemical_Formula</label></p>
+				    <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">Chemical Formula</label></p>
 				    <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">Hardness</label></p>
 				    <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">Density</label></p>
 				    <p><label class="thisareaLabel littleDD" onclick="loadcontent(this)">Cleavage</label></p>
