--- a/Veg_Input_Page.html
+++ b/Veg_Input_Page.html
@@ -28,7 +28,7 @@
 
             <link rel="stylesheet"
               type="text/css"
-              href="./VegInput.css"
+              href="DataInput.css"
              >
         
     </head>
