added some functionality to the main page, on login the contributers picture also now displays

--- a/IBIS_main2.html
+++ b/IBIS_main2.html
@@ -29,7 +29,10 @@
 	      <input type="text" name="catValue" id="catHeading" class="hiddentext" />
 	    </form>
 	    <div id="errorDiv"></div>
+	   <div id="regholder">
+	    <div id="regpic"></div>
 	    <div id="greetingDiv"></div>
+	   </div>
 	    <div id="loginLink" class="littleDD linksclass" style="">
 	      <label id="loginhead" class="littleDD linksclass" onclick="showLogin()">Login</label>
 	      <label id="logouthead" class="littleDD linksclass logoutCstart" style="display:none;" onclick="do_logout()">Logout</label>
