consolidated input js into 1 file instead of 3

--- a/Animal_Input_Page2.html
+++ b/Animal_Input_Page2.html
@@ -9,7 +9,7 @@
         <script type="text/javascript" src="main.js"> </script>
         <script type="text/javascript" src="fileselect.js"></script>
         <script type="text/javascript" src="dateshorts.js"> </script>
-        <script type="text/javascript" src="animalInput.js"></script>	
+        <script type="text/javascript" src="dataInputFunctions.js"></script>	
 	<script type="text/javascript">
 	$(document).ready(function(){
           $('#mediaPic').change(handleFileSelect);	
