--- a/Mineral_Input_Page2.html
+++ b/Mineral_Input_Page2.html
@@ -7,7 +7,7 @@
         </title>
         <script type="text/javascript" src="jquery-1.11.3.js"> </script>
         <script type="text/javascript" src="DD_rondies.js"></script>
-				<script type="text/javascript" src="http://127.0.0.1/ibis/minInput.js"></script>
+				<script type="text/javascript" src="http://127.0.0.1/ibis/dataInputFunctions.js"></script>
 				<script type="text/javascript" src="http://127.0.0.1/ibis/fileselect.js"></script>
 	
 	<script type="text/javascript">
