--- a/Veg_Input_Page.html
+++ b/Veg_Input_Page.html
@@ -7,7 +7,7 @@
         </title>
         <script type="text/javascript" src="jquery-1.11.3.js"> </script>
 	<script type="text/javascript" src="http://127.0.0.1/ibis/fileselect.js"></script>
-	<script type="text/javascript" src="http://127.0.0.1/ibis/vegInput.js"></script>
+	<script type="text/javascript" src="http://127.0.0.1/ibis/dataInputFunctions.js"></script>
 	
 	<script type="text/javascript">
 		$(document).ready(function(){
