trieng to changethe filenames again, this time on a branch

--- a/IBISanimalsRef.html
+++ b/IBISanimalsRef.html
@@ -23,7 +23,7 @@
       <div id="logo_image_holder">
 	<img id="logo_image" src="./images/Logo1_fullsizetransp.png"/>
       </div>
-       <a href="IBIS_main2.html" class="buttonclass littleDD"><img src="" alt="">Back to Main Screen</a>
+       <a href="IBISmain.html" class="buttonclass littleDD"><img src="" alt="">Back to Main Screen</a>
       <div id="detail_fs_min" class="littleDD"
        <div class="basetop">
 	 <a href="#" onclick="expandAll(document.getElementById('base'))">Expand</a> -
