--- a/IBISregistration.html
+++ b/IBISregistration.html
@@ -34,10 +34,10 @@
       	  <img id="logo_image" src="./images/Logo1_fullsizetransp.png" />
       	</div>
       	<div id="allcontainer">
-					<form name="registerForm" method="POST" action="../../cgi-bin/IBIS_register.php3" enctype="multipart/form-data" >
+					<form name="registerForm" method="POST" action="../../cgi-bin/IBIScontribRegister.php3" enctype="multipart/form-data" >
 						<div id=pgButtons>
 	      			<input type="button" id="buttonBtn" class="littleDD buttonclass" onclick="submitRegistration()" value="Submit">
-	      			<a id="backButton" href="/ibis/IBIS_main2.html" class="littleDD buttonclass">Back to Main Page </a>
+	      			<a id="backButton" href="/ibis/IBISmain.html" class="littleDD buttonclass">Back to Main Page </a>
 	    			</div>
 	  				<fieldset id="detail_fs" class="littleDD">
             	<div id="personalDetails" class="littleDD">
