--- a/IBISutilities.html
+++ b/IBISutilities.html
@@ -24,33 +24,33 @@
         <img id="logo_image" src="./images/Logo1_fullsizetransp.png" />
       </div>
       <div id="controlP">
-        <a href="IBIS_main2.html" class="submitButton littleDD buttonclass"><img src="" alt="" />Back to Main Screen</a>
+        <a href="IBISmain.html" class="submitButton littleDD buttonclass"><img src="" alt="" />Back to Main Screen</a>
       </div>
       <div id="detail_fs" class="littleDD detail_fs">
         <div id="AdminList" class="linklist littleDD locked">
 	  <h3>Add Information to the Database</h3>
 	  <ul>
 	    <li>
-  	      <a href="Veg_Input_Page.html">Add Vegetable Data</a>
+  	      <a href="IBISnewVegetables.html">Add Vegetable Data</a>
 	    </li>
 	    <li>
-	      <a href="Animal_Input_Page2.html">Add Animal Data</a>
+	      <a href="IBISnewAnimals.html">Add Animal Data</a>
 	    </li>
 	    <li>
-	      <a href="Mineral_Input_Page2.html">Add Mineral Data</a>
+	      <a href="IBISnewMinerals.html">Add Mineral Data</a>
 	    </li>
 	  </ul>
 	</div>
 	<div id="listsList" class="linklist littleDD">
 	  <ul>
 	    <li>
-	      <a href="IBIS_animalia-table.html">Kingdom Animalia </a>
+	      <a href="IBISanimalsRef.html">Kingdom Animalia </a>
 	    </li>
 	    <li>
-	      <a href="VegGlEntry.html">Add a Glossary item </a>
+	      <a href="IBISvegGlossaryEntry.html">Add a Glossary item </a>
 	    </li>
 	    <li>
-              <a href="plantae.html">Plantae</a>
+              <a href="IBISplantsRef.html">Plantae</a>
 	    </li>
 	  </ul>
 	</div>
