minor repars arising from scema change

--- a/IBISnewMinerals.html
+++ b/IBISnewMinerals.html
@@ -99,7 +99,7 @@
           		<p class="labelclass">Add Media</p>
 	      			<input type="file" name="ibismedia[]" id="mediaPic" class="littleDD" multiple />
 	      		</div>
-	      		
+	      		<input type="text" name="thecat" value="Minerals" id="thecatid" class="hiddentext" />
 	      		<div id="tagslist"></div>
 	      		<div id="imgDisplay" class="littleDD"></div>
 	      		<div id="optionsDsplay" class="littleDD" style="display : none;"></div> 
