--- a/IBISnewAnimals.html
+++ b/IBISnewAnimals.html
@@ -114,7 +114,7 @@
 	  			</fieldset>
 	 			</form>
 	 			<form  name="AnimDupEditForm" action="../../cgi-bin/IBISeditStuff.php3" method="POST" enctype="multipart/form-data" class="hiddentext">
-	<input type="text" name="thecat" value="animals" id="thecatid" class="hiddentext" />
+	<input type="text" name="thecat" value="Animals" id="thecatid" class="hiddentext" />
 	<input type="text" name="specref" value="" id="specid" class="hiddentext" />
 </form>
 	 			<div id="messageDiv">
