added ac class to main container and changed the reference in the InputFunctions script

--- a/IBISanimalsRefMini.html
+++ b/IBISanimalsRefMini.html
@@ -5,8 +5,9 @@
    <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Animalia</title>
+    
+    <link rel="stylesheet" href="details.css" type="text/css">
     <link rel="stylesheet" href="Kingdom_Plantae.html_files/treestyles.css" type="text/css"/>
-    <link rel="stylesheet" href="Kingdom_Plantae.html_files/details.css" type="text/css">
     <script type="text/javascript" src="Kingdom_Plantae.html_files/marktree.js"> 
     </script>
 </head>
