--- a/IBISmain.html
+++ b/IBISmain.html
@@ -17,7 +17,7 @@
 
     </head>
     <body id="TheBody" onload="initForm()">
-      <div id="MainallContainer" class="bigDD">
+      <div id="MainallContainer" class="bigDD ac">
 	    <div id="dateTime">
 	      <div id="dateBlock">The Date</div>
 	      <div id="timeBlock">The Time</div>       
