--- a/IBISnewAnimals.html
+++ b/IBISnewAnimals.html
@@ -38,7 +38,7 @@
 	 <div id="dateBlock">The Date</div>
 	 <div id="timeBlock">The Time</div>       
 	 </div>
-        <div name="Heading">
+        <div id="Heading">
 	        <img id="logo_image" src="./images/Logo1_fullsizetransp.png">
             <p id="headingText">Animal Input Form</p>
         </div>
