added some stuff

--- a/IBISnewAnimals.html
+++ b/IBISnewAnimals.html
@@ -81,7 +81,7 @@
                 
         <form  name="AnimForm" action="../../cgi-bin/IBISnewAnimals.php3" method="POST" enctype="multipart/form-data" class="">
 	  			<fieldset id="dataForm" class="hiddentext">
-				    <input type="text" name="Akingdom" value="Animalia" class="hiddentext"></input>
+				    <input type="text" id = "Kingdom" name="Akingdom" value="Animalia" class="hiddentext"></input>
 				    <input type="text" id="Phylum" name="Aphylum" class="hiddentext"></input>
 				    <input type="text" id="subPhylum" name="AsubPhylum" class="hiddentext"></input>
 				    <input type="text" id="Class" name="Aclass" class="hiddentext"></input>
