--- a/IBISregistration.html
+++ b/IBISregistration.html
@@ -9,7 +9,7 @@
         <script type="text/javascript" src="Gmain.js"> </script>
         <script type="text/javascript" src="dateshorts.js"></script>
         <script type="text/javascript" src="IBIS_register.js"></script>
-        <script type="text/javascript" src="http://127.0.0.1/ibis/fileselect.js"></script>
+        <script type="text/javascript" src="fileselect.js"></script>
 	
 	<script type="text/javascript">
 		$(document).ready(function(){
