updated from Kali

--- a/IBISLostnFound.html
+++ b/IBISLostnFound.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="picswap.js"> </script>
     <link rel="stylesheet"
         type="text/css"
-        href="IBIS_maincss.css"
+        href="Blnf.css"
     />
     <link rel="stylesheet" 
     	type="text/css" 
@@ -49,7 +49,9 @@
 	    <div id="logo_image_holder">
 	      <img id="logo_image" src="./images/Logo1_fullsizetransp.png"/>
 	    </div>
+	    <div id="pgHeading">Lost & Found</div>
 	   <div id="pgButtonslnf" class="littleDD">
+	   		<a href="IBISutilities.html" class="linkC"><img src="" alt="">Back to Utilities</a>
         	<a href="IBISmain.html" class="buttonclassAI littleDD"><img src="" alt="">Back to Main Screen</a>
          </div>
 	    <div id="detail_fs_main" class="littleDD">
@@ -77,11 +79,7 @@
 	    		</span>
 	    		<span class="messSpan"> This is where all the unmatched images end up. If you know any of these, click on it to enter it as a new data entry </span>
 	    	</div>
-	     	<div id="buttons">
-			 	<span onclick="goback()">
-			 		&lt--
-			 	</span>
-	     	</div>
+	     	
 	    </div>
 	 </div>
 	</body>
