--- a/IBISmain.html
+++ b/IBISmain.html
@@ -16,7 +16,7 @@
     </script>
     <link rel="stylesheet"
         type="text/css"
-        href="IBIS_maincss.css"
+        href="Bmain.css"
     />
     <link rel="stylesheet" 
     	type="text/css" 
