--- a/IBISsources.html
+++ b/IBISsources.html
@@ -43,12 +43,9 @@ srcSubmit();
        </script>
     	<link rel="stylesheet"
 		    type="text/css"
-		    href="IBIS_maincss.css"
+		    href="Bsource.css"
     	/>
-    	<link rel="stylesheet"
-        type="text/css"
-        href="DataInput.css"
- 	 >
+    	
     	<link rel="stylesheet" 
 			type="text/css" 
 			media="only screen and (max-width: 480px)" 
