--- a/IBISutilities.html
+++ b/IBISutilities.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="dateshorts.js"></script>
   <link rel="stylesheet"
   		type="text/css"
-        href="IBIS_maincss.css"
+        href="Butilities.css"
        />
  <link rel="stylesheet" 
     	type="text/css" 
@@ -20,7 +20,7 @@
       
     </head>
     <body id="TheBody" onload="initForm()">
-        <div id="MainallContainer" class="ac">
+        <div id="UtilallContainer" class="ac">
       <div id="dateTime">
         <div id="dateBlock">The Date</div>
         <div id="timeBlock">The Time</div>       
@@ -29,7 +29,7 @@
         <img id="logo_image" src="./images/Logo1_fullsizetransp.png" />
       </div><div id="utilHeading">Utilities</div>
       <div id="controlP">
-        <a href="IBISmain.html" class="submitButton littleDD buttonclass"><img src="" alt="" />Back to Main Screen</a>
+        <a href="IBISmain.html" class="linkC"><img src="" alt="" />Back to Main Screen</a>
       </div>
       <div id="detail_fs" class="littleDD detail_fs">
         <div id="AdminList" class="linklist littleDD locked">
